# qjsp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SELFNOTE.md
cmake/: RE2.cmake
src/: _clangd_tu.cpp
src/qjsp/: array.cpp  array.hpp  ast.hpp  ast_dbg.hpp  ast_emit.cpp  ast_emit.hpp  atom.hpp  bigint.cpp  bigint.hpp  binding.cpp  binding.hpp  bytecode.hpp  class.hpp  context.cpp  context.hpp  engine.cpp  engine.hpp  eval_ast.cpp  function.cpp  function.hpp  gc.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  lexer2.cpp  lexer2.hpp  object.cpp  object.hpp  parser.cpp  parser.hpp  parser2.hpp  parser2_expr.cpp  parser2_fn.cpp  parser2_primary.cpp  parser2_stmt.cpp  primitive.cpp  primitive.hpp  reg_interpreter.cpp  reg_interpreter.hpp  (+28 more)
tests/: CMakeLists.txt  gc_adversarial.cpp  interpreter.cpp  lexer.cpp  main.cpp  object.cpp  parser.cpp  parser2.cpp  runtime.cpp  value.cpp
tools/: perf_test.cpp  run_test262.py
